# Vic2Modding

./: CMakeLists.txt  README.md
lodepng/: lodepng.c  lodepng.cpp  lodepng.h
source/: assert_opt.h  camera.c  file.c  file.h  lexer.c  lexer.h  maths.c  maths.h  memory_opt.c  memory_opt.h  parser.c  parser.h  render.c  render.h  string_wrapper.c  string_wrapper.h  types.h  win32_tools.c  win32_tools.h  winmain.c
source/database/: database.h  database_lists.c  database_parsing.c  database_parsing.h  database_parsing_common.c  database_parsing_history.c  database_parsing_map.c  database_parsing_technology.c  database_parsing_units.c  database_types.c  modifiers.h
